--- a/.github/workflows/deploy_infrastructure.yml
+++ b/.github/workflows/deploy_infrastructure.yml
@@ -5,12 +5,12 @@ on:
     branches:
       - main
     paths:
-      - 'INFRA/**'
+      - 'Infra/**'
   pull_request:
     branches:
       - main
     paths:
-      - 'INFRA/**'
+      - 'Infra/**'
   workflow_dispatch:
 
 permissions:
