adding production branch setting

--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -39,3 +39,4 @@ jobs:
           action: "upload"
           app_location: "Blogwasm"
           output_location: "wwwroot"
+          production_branch: "main"
